--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@clr/icons": "^0.13.8",
     "@webcomponents/custom-elements": "^1.0.0",
     "core-js": "^2.5.4",
+    "ngx-cookie-service": "^2.0.0",
     "rxjs": "~6.2.0",
     "scrollto-with-animation": "^4.5.2",
     "zone.js": "~0.8.26"
