--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.0.4",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.0.4",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@clr/icons": "^0.13.8",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^6.1.2",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "@webcomponents/custom-elements": "^1.0.0",
+    "carbon-components": "^9.53.3",
+    "carbon-components-angular": "^2.0.9",
     "core-js": "^2.5.4",
+    "materialize-css": "^1.0.0-rc.2",
     "ngx-cookie-service": "^2.0.0",
     "rxjs": "~6.2.0",
     "scrollto-with-animation": "^4.5.2",
